# Chronicling-Germany-Code

./: .gitignore  .pylintrc  Dataloader.py  Dataset.py  LICENSE  NewsDataset.py  Postprocessing.py  Preprocessing.py  README.md  create_crops.py  download.py  full_site_predict.py  main.py  model.py  mypy.ini  neurips-split.json  news_dataset.py  noxfile.py  pipeline.sh  postprocessing.py  predict.py  predict.sh  preprocessing.py  requirements.txt  setup.cfg  test_worker.py  train.py  utils.py
.github/workflows/: tests.yml
Script/: convert_xml.py  create_crops.py  draw_img.py  read_xml.py
Skript/: convert_xml.py  downscale.py  draw_img.py  read_json.py  read_xml.py  read_xml_HLNA2013.py  read_xml_transcribus  read_xml_transcribus.py
experiments/: worker_experiment.py
experiments/plotting/: custom_bar_plot.py  draw_legend.py  hyper_plotting.py  loss_amp_plotting.py  split_plotting.py  tensorboard_results.py  utils.py  worker_prefetch_plotting.py
notebooks/: create_anno_image.ipynb  create_full_site_result_image.ipynb  plot_tensorboard_results.ipynb
script/: apply_reading_order.py  calculate_class_ratio.py  convert_xml.py  count_elements.py  create_crops.py  download.py  draw_img.py  draw_targets.py  pipeline.sh  random_line_selector.py  read_xml.py  reading_order.py  scale_data.py  scale_images.py  split_dataset.py  transkribus_export.py  validate_dataset.py
script/large_data_pipeline/: clean_file_list.py  generate_file_list.sh  line_selector.py  organize_data.sh  organize_results.sh  run_pipeline_for_large_data.sh
slurm/: convert.slurm  europeaner-next.slurm  europeaner-start.slurm
src/: download.py
src/OCR/: __init__.py  evaluate_ocr.py  evaluate_pipeline.py  predict.py  preprocess.py  requirements.txt  split.py  train.py  (+2 more)
tests/: bbox_test_data.py  test_datasets.py  test_export.py  test_news_dataset.py  test_newsdataset.py  test_preprocessing.py  test_read_xml.py  test_reading_order.py
(+346 files in other folders)
