##########################
# Setup.py Configuration #
##########################
[metadata]
name = cgprocess
version = 0.0.1-dev
description = Newspaper layout detection and optical character recognition
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code
download_url = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code/releases
project_urls =
    Bug Tracker = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code/issues
    Source Code = https://github.com/Digital-History-Bonn/Chronicling-Germany-Code


keywords =
    Digital History
    Document Analysis
    Deep Learning

# Author information
author = Digital History Bonn Team


# License information
license = EUROPEAN UNION PUBLIC LICENCE
license_files = LICENSE

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    scikit-learn
    scikit-image>=0.19.2
    pytest
    mypy
    pylint
    nox
    lxml
    ml_collections
    positional-encodings
    torchmetrics
    tikzplotlib
    typing-extensions==4.5.0
    tensorboard==2.13
    requests
    tabulate
    matplotlib
    numpy
    torch==2.1.2
    torchvision
    nltk
    Levenshtein
    monai
    beautifulsoup4
    kraken==5.2.9
    lightning
    matplotlib
    Pillow
    tqdm
    opencv-python
    albumentations

python_requires = >=3.9

packages = find:
package_dir =
    = src

[options.packages.find]
where = src